updated the title section

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="title-head"> Are you one among them too?? Go and check out what we have!!</h1>
+          <h1 class="title-head"> Are you one among the shopping fans too?? Go and check out what we have!!</h1>
           <a href="https://teeshopper.in/store/my-stores-to-help" target="_blank">
           <button type="button" class="btn btn-outline-dark btn-lg explore"><i class="fas fa-binoculars"></i> Explore</button>
           </a>
